--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^8.2.0",
     "gatsby": "^2.17.5",
     "gatsby-image": "^2.2.30",
+    "gatsby-plugin-google-analytics": "^2.3.0",
     "gatsby-plugin-manifest": "^2.2.24",
     "gatsby-plugin-offline": "^2.2.10",
     "gatsby-plugin-react-helmet": "^3.1.13",
